--- a/style.css
+++ b/style.css
@@ -75,3 +75,21 @@ form span {
     font-size: 25px;
     pointer-events: none; /* Không cho phép tương tác với biểu tượng */
 }
+
+
+/* start detail */
+/* end detail */
+
+
+/* start contact */
+/* end contact */
+
+
+
+/* start cart */
+/* end cart */
+
+
+
+/* start pay */
+/* end pay */
