--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 }
 body {
     width: 100%;
+    height: 300vh;
     font-family: "Poppins", sans-serif;
 }
 
@@ -74,6 +75,11 @@ form span {
     transform: translateY(-50%);
     font-size: 25px;
     pointer-events: none; /* Không cho phép tương tác với biểu tượng */
+}
+.section-5-container-box-image-2{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 
