--- a/style.css
+++ b/style.css
@@ -90,6 +90,12 @@ form span {
     color: #fff !important;
 }
 
+.equal-image {
+    width: 100%;
+    height: 350px;
+    object-fit: cover;
+}
+
 .footer {
     background-color: #f8f9fa;
     padding: 30px 0;
