--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,6 +19,15 @@ body {
     width: 100%;
 }
 
+.product-name {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: normal;
+  }
+
 .header-row-1 {
     width: 100%;
     /* display: flex; */
