--- a/style.css
+++ b/style.css
@@ -109,6 +109,25 @@ nav .navbar-nav {
   text-decoration: underline;
 }
 
+
+/* product */
+.filter-box {
+  border: 1px solid #ddd;
+  padding: 15px;
+  border-radius: 5px;
+  background-color: #f9f9f9;
+  /* Xóa height: 100% để tránh box kéo dài */
+}
+
+.product-grid .card {
+  height: 100%;
+}
+
+.product-grid img {
+  height: 200px;
+  object-fit: cover;
+}
+/* end product */
 /* start detail */
 
 .rating {
