--- a/style.css
+++ b/style.css
@@ -455,7 +455,7 @@ body {
     min-height: 100vh;
 }
 
-.container {
+.thancontainer {
     width: 80%;
     max-width: 1200px;
     background-color: white;
