--- a/style.css
+++ b/style.css
@@ -59,6 +59,47 @@ nav .navbar-nav {
   color: #999; /* Màu của icon */
 }
 
+.search-results {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 300px; /* Giảm chiều rộng của box */
+  background-color: #fff;
+  border: 1px solid #ddd;
+  max-height: 300px; /* Giới hạn chiều cao */
+  overflow-y: auto;
+  z-index: 9999;
+  display: none; /* Ẩn mặc định */
+  padding: 5px; /* Giảm padding */
+  border-radius: 5px; /* Bo góc box */
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); /* Hiệu ứng đổ bóng */
+  margin-top: 5px;
+}
+
+.search-results-item {
+  display: flex;
+  align-items: center;
+  padding: 5px; /* Giảm padding giữa các sản phẩm */
+  border-bottom: 1px solid #f0f0f0;
+  cursor: pointer;
+}
+
+.search-results-item img {
+  width: 40px; /* Giảm kích thước hình ảnh */
+  height: 40px;
+  object-fit: cover;
+  margin-right: 8px;
+}
+
+.search-results-item span {
+  font-size: 14px; /* Giảm kích thước chữ */
+}
+
+.search-results-item:hover {
+  background-color: #f9f9f9;
+}
+
+
 .card-hover:hover {
   background-color: #4490db !important;
   color: #fff !important;
